[package]
name = 'cv-convert'
description = 'Type conversions among famous Rust computer vision libraries'
version = '0.25.0'
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = '2021'
documentation = 'https://docs.rs/cv-convert/'
repository = 'https://github.com/jerry73204/rust-cv-convert.git'
homepage = 'https://github.com/jerry73204/rust-cv-convert/'
readme = 'README.md'
license = 'MIT'

[package.metadata.docs.rs]
features = ['docs-only']

[features]
default = [
    'tch',
    'rsmpeg',
    'ndarray',
    'opencv',
    'nalgebra',
    'image',
    'imageproc',
]
docs-only = [
    'tch',
    'rsmpeg',
    'ndarray',
    'opencv',
    'nalgebra',
    'image',
    'imageproc',
]

[dev-dependencies]
rand = '0.9'
approx = '0.5'
itertools = '0.14'

[dependencies]
half = '2.4'
anyhow = '1.0'
num-traits = '0.2'
tch = { version = '0.18', default-features = true, optional = true}
image = { version = '0.25', default-features = true, optional = true }
nalgebra = { version = '0.33', default-features = true, optional = true }
ndarray = { version = '0.16', default-features = true, optional = true }
imageproc = { version = '0.25', default-features = true, optional = true }
rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", optional = true, features = [
    "ffmpeg7", "link_system_ffmpeg"
] }
opencv = { version = '0.94', optional = true, features = [
    "dnn",
    "videoio",
    "highgui",
    "imgproc",
    "imgcodecs",
    "calib3d",
    "features2d",
    "objdetect",
    "tracking",
    "stitching",
    "clang-runtime",
] }
